fix highlights text wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -181,14 +181,23 @@ a.share-profile-button {
 section.highlights-bar {
     display: flex;
     overflow-y: hidden;
+    overflow-x: auto;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    width: 100%;
+}
+
+.highlights-container {
+    display: flex;
+    width: 100%;
 }
 
 ul.highlights-list {
     display: flex;
     padding: 0;
     list-style-type: none;
+    flex-wrap: nowrap; /* Prevent wrapping */
+    width: max-content; /* Allow list to expand */
 }
 
 li.highlights-item {
@@ -213,10 +222,9 @@ div.highlights-item-image-container {
 }
 
 div.highlights-item-image-container a {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -232,11 +240,21 @@ img.highlights-item-image {
 
 div.highlights-item-text {
     text-align: center;
-    width: 60px;
-    #f5f5f5-space: nowrap;
+    width: 65px;
+    max-width: 65px;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 11px;
     font-weight: 300;
     line-height: 16px;
+    box-sizing: border-box;
+}
+
+div.highlights-item-text span {
+    white-space: nowrap;
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
